// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion"
    data-backpack-ds-component="Accordion"
  >
    <div>
      Accordion Item 1
    </div>
    <div>
      Accordion Item 2
    </div>
    <div>
      Accordion Item 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly even when multiple items are marked as initially expanded 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion"
    data-backpack-ds-component="Accordion"
  >
    <div>
      Accordion Item 1
    </div>
    <div>
      Accordion Item 2
    </div>
    <div>
      Accordion Item 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion someClass"
    data-backpack-ds-component="Accordion"
    foo="bar"
  >
    <div>
      Accordion Item 1
    </div>
    <div>
      Accordion Item 2
    </div>
    <div>
      Accordion Item 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly with custom initially expanded item 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion"
    data-backpack-ds-component="Accordion"
  >
    <div>
      Accordion Item 1
    </div>
    <div>
      Accordion Item 2
    </div>
    <div>
      Accordion Item 3
    </div>
  </div>
</DocumentFragment>
`;
